# mnemo

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html
.cursor/rules/: project-memory.mdc
.github/workflows/: ci.yml  release.yml
mnemo/: Cargo.toml  README.md
mnemo-python/: .gitignore  Cargo.toml  README.md  pyproject.toml  test_mnemo.py
mnemo-python/src/: lib.rs
mnemo/bindings/node/: Cargo.toml
mnemo/bindings/node/src/: lib.rs
mnemo/bindings/python/: Cargo.toml
mnemo/bindings/python/src/: lib.rs
mnemo/examples/: quickstart.rs  session.rs
mnemo/src/: cache.rs  crypto.rs  error.rs  format.rs  index.rs  lib.rs  memory.rs  pager.rs  session.rs  store.rs  wal.rs
mnemo/tests/: cli_smoke.rs  integration.rs
test/: .env.example  README.md  requirements.txt
test/scripts/: perf_v0.1.0.json  project_memory.py  seed.json
