[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mnemo"
version = "0.1.0"
description = "Encrypted, portable agent-memory engine — Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/toarchkumar/mnemo"
Repository = "https://github.com/toarchkumar/mnemo"

[tool.maturin]
# Pure-Rust extension; the module name comes from [lib] name in Cargo.toml.
features = ["pyo3/extension-module"]
