[package]
# Distribution name on crates.io is `mnemo-db` because `mnemo` is already
# taken by an unrelated crate. The library and CLI binary names below stay
# `mnemo`, so consumers still write `use mnemo::...` and invoke `mnemo` on
# the command line after `cargo add mnemo-db`.
name = "mnemo-db"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Encrypted, single-file, portable agent memory engine"
license = "Apache-2.0"
repository = "https://github.com/toarchkumar/mnemo"
readme = "README.md"

# The core crate is the workspace root. The language bindings are members but
# NOT default members: a plain `cargo build` / `cargo test` builds only the
# core (which needs no Python or Node toolchain). Build a binding explicitly
# with `cargo build -p mnemo-python` / `-p mnemo-node`.
[workspace]
members = ["bindings/python", "bindings/node"]
default-members = ["."]

[lib]
name = "mnemo"
path = "src/lib.rs"

[[bin]]
name = "mnemo"
path = "src/bin/mnemo.rs"

[dependencies]
aes-gcm = "=0.10.3"
argon2 = "=0.5.3"
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
rmp-serde = "=1.3.0"
# Pin the transitive `rmp` crate: 0.8.15+ requires the edition2024 Cargo
# feature, which is unavailable on our MSRV (1.75).
rmp = "=0.8.14"
# Pulled in by `argon2`; 1.7+ requires edition2024.
base64ct = "=1.6.0"
ulid = { version = "=1.1.3", features = ["serde"] }
thiserror = "=1.0.64"
zeroize = "=1.8.1"
rand = "=0.8.5"
clap = { version = "=4.4.18", features = ["derive"] }
# Used by the `mnemo` CLI binary only — `passphrase()` calls it when stdin
# is a TTY to read the passphrase without echo. The library never touches
# it, but Cargo doesn't have first-class "binary-only" deps, so it's
# pulled in unconditionally. Small (~50 KB compiled) and zero runtime
# cost when unused.
rpassword = "=7.3.1"

[dev-dependencies]
tempfile = "=3.10.1"

[profile.release]
lto = true
codegen-units = 1
