[package]
name = "mnemo-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Node.js bindings for the Mnemo encrypted agent-memory engine"
license = "Apache-2.0"

[lib]
name = "mnemo_node"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
mnemo = { path = "../.." }
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
