[package]
name = "mnemo-node"
version = "0.3.2"
edition = "2021"
rust-version = "1.75"
description = "Node.js bindings for the Mnemo encrypted agent-memory engine (experimental scaffold; not yet published to npm)"
license = "Apache-2.0"
# Not yet published. When the bindings are stable enough to ship the
# real distribution will go to npm via napi-build, not to crates.io;
# this prevents an accidental `cargo publish`.
publish = false

[lib]
name = "mnemo_node"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Core crate is published as `mnemo-engine`; its [lib] name stays `mnemo`,
# so source code still writes `use mnemo::...`.
mnemo = { package = "mnemo-engine", path = "../.." }
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
