[package]
name = "mnemo-python"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Python bindings for the Mnemo encrypted agent-memory engine"
license = "Apache-2.0"

[lib]
name = "mnemo"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Core crate is published as `mnemo-db`; its [lib] name stays `mnemo`,
# so source code still writes `use mnemo::...`.
mnemo = { package = "mnemo-db", path = "../.." }
pyo3 = { version = "0.22", features = ["extension-module"] }
